Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-4657

Gimp/GTK+ drawing problems

    XMLWordPrintable

Details

    Description

      Current Gimp version show broken graphical primitives when starting the GUI. Same for the GTK+ testsuite obtained from here:
      http://ftp.gnome.org/pub/gnome/binaries/win32/gtk+/2.18/gtk+-bundle_2.18.5-20091215_win32.zip
      File: bin/gtk-demo.exe

      Attachments

        1. debug-r69930.log
          129 kB
        2. freetype getglyphoutline.patch
          1 kB
        3. freetype getglyphoutline.patch
          1 kB
        4. freetype-getglyphoutline-2.patch
          1 kB
        5. GetGlyphOutline_Hack.diff
          0.9 kB
        6. GetGlyphOutline_Hackfix.patch
          1 kB
        7. GetGlyphOutline fix.png
          GetGlyphOutline fix.png
          75 kB
        8. gimp2.6.7-img2-R62832.png
          gimp2.6.7-img2-R62832.png
          33 kB
        9. gimp2.6.7-img3-R62832.png
          gimp2.6.7-img3-R62832.png
          93 kB
        10. gimp2.6.7-img4-R62832.png
          gimp2.6.7-img4-R62832.png
          77 kB
        11. Glyphs.cpp
          3 kB
        12. Glyphs.exe
          33 kB
        13. Glyphs.png
          Glyphs.png
          69 kB
        14. GlyphsText2003Reactos.png
          GlyphsText2003Reactos.png
          62 kB
        15. gtk+_2.24.10_r58446.png
          gtk+_2.24.10_r58446.png
          11 kB
        16. gtk+demo.png
          gtk+demo.png
          18 kB
        17. gtk-demo_win2k3_ROSr63946.png
          gtk-demo_win2k3_ROSr63946.png
          446 kB
        18. hello_cairo.zip
          1.13 MB
        19. hello_cairo2.zip
          2.64 MB
        20. HelloCairo_r58446.png
          HelloCairo_r58446.png
          12 kB
        21. HelloCairo_win2k3_ROSr63946.png
          HelloCairo_win2k3_ROSr63946.png
          217 kB
        22. HelloCairo2_win2k3_ROSr63946.png
          HelloCairo2_win2k3_ROSr63946.png
          212 kB
        23. HelloCairo2.cpp
          2 kB
        24. HelloGTK_win2k3_ROSr63946.png
          HelloGTK_win2k3_ROSr63946.png
          281 kB
        25. HelloGTK.exe
          33 kB
        26. libgdk-2.24.14-MinGW.rar
          740 kB
        27. MetricsTest_win7_r58581.png
          MetricsTest_win7_r58581.png
          42 kB
        28. MetricsTest.cpp
          4 kB
        29. MetricsTest.exe
          59 kB
        30. ReactOS_GetGlyphOutline_Hacked.png
          ReactOS_GetGlyphOutline_Hacked.png
          29 kB
        31. ReactOS_GIMP_after_hackfix.png.png
          ReactOS_GIMP_after_hackfix.png.png
          49 kB
        32. ReactOS_gtk_demo_after_hackfix_with32bpp.png
          ReactOS_gtk_demo_after_hackfix_with32bpp.png
          35 kB
        33. ReactOS_Wireshark_after_hackfix_with_gdk_2.24.10.0.png
          ReactOS_Wireshark_after_hackfix_with_gdk_2.24.10.0.png
          80 kB
        34. ReactOS_Wireshark_after_hackfix.png
          ReactOS_Wireshark_after_hackfix.png
          63 kB
        35. ReactOS1-r69930.png
          ReactOS1-r69930.png
          124 kB
        36. ReactOS-2013-03-22-13-46-46.png
          ReactOS-2013-03-22-13-46-46.png
          20 kB
        37. ReactOS-2013-10-28-14-01-44.png
          ReactOS-2013-10-28-14-01-44.png
          54 kB
        38. ReactOS2-r69930.png
          ReactOS2-r69930.png
          82 kB
        39. ReactOS gimp.png
          ReactOS gimp.png
          141 kB
        40. ReactOS gimp startup.png
          ReactOS gimp startup.png
          280 kB
        41. ROS_GGO_PDY.png
          ROS_GGO_PDY.png
          4 kB
        42. snapshot24.png
          snapshot24.png
          43 kB
        43. snapshot26.png
          snapshot26.png
          42 kB
        44. tahoma_normal_vs_tahoma_bugged.png
          tahoma_normal_vs_tahoma_bugged.png
          6 kB
        45. TextOutTest.cpp
          2 kB
        46. TextOutTest.exe
          53 kB
        47. TextOutTest2.cpp
          3 kB
        48. TextOutTest2.exe
          56 kB
        49. TextOutTest3_r58446.png
          TextOutTest3_r58446.png
          22 kB
        50. TextOutTest3.cpp
          3 kB
        51. TextOutTest3.exe
          56 kB
        52. TextOutTests_r58446.png
          TextOutTests_r58446.png
          13 kB
        53. TextOutTests_Win2003.png
          TextOutTests_Win2003.png
          6 kB
        54. TextOutTests_Win7.png
          TextOutTests_Win7.png
          19 kB
        55. TextOutTests_WinXP.png
          TextOutTests_WinXP.png
          176 kB
        56. VictorGlyph.iso
          214 kB

        Issue Links

          Activity

            People

              ThePhysicist Timo Kreuzer
              grschneider Gregor Schneider
              Votes:
              5 Vote for this issue
              Watchers:
              13 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: