[WIN32K] Add support for arbitrary scaling matrices when rendering glyphs. Partly fixes CORE-4657 Todo: handle glyph coordinates

svn path=/trunk/; revision=58414